// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baselineShift renders 0 1`] = `
Array [
  .c0 {
  baseline-shift: 0;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: 0;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: 0;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`baselineShift renders function 1`] = `
Array [
  .c0 {
  baseline-shift: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: has;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: has;
}

<div
    className="c0"
  />,
]
`;

exports[`baselineShift renders invalid theme path 1`] = `
Array [
  .c0 {
  baseline-shift: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`baselineShift renders negative number 1`] = `
Array [
  .c0 {
  baseline-shift: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`baselineShift renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    baseline-shift: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-shift: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-shift: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    baseline-shift: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    baseline-shift: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-shift: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-shift: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    baseline-shift: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    baseline-shift: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-shift: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-shift: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    baseline-shift: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    baseline-shift: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-shift: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-shift: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    baseline-shift: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`baselineShift renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    baseline-shift: July;
  }
}

@media April {
  .c0 {
    baseline-shift: August;
  }
}

@media January {
  .c0 {
    baseline-shift: September;
  }
}

@media April {
  .c0 {
    baseline-shift: November;
  }
}

@media June {
  .c0 {
    baseline-shift: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    baseline-shift: July;
  }
}

@media April {
  .c0 {
    baseline-shift: August;
  }
}

@media January {
  .c0 {
    baseline-shift: September;
  }
}

@media April {
  .c0 {
    baseline-shift: November;
  }
}

@media June {
  .c0 {
    baseline-shift: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    baseline-shift: January;
  }
}

@media April {
  .c0 {
    baseline-shift: December;
  }
}

@media January {
  .c0 {
    baseline-shift: April;
  }
}

@media April {
  .c0 {
    baseline-shift: May;
  }
}

@media June {
  .c0 {
    baseline-shift: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    baseline-shift: January;
  }
}

@media April {
  .c0 {
    baseline-shift: December;
  }
}

@media January {
  .c0 {
    baseline-shift: April;
  }
}

@media April {
  .c0 {
    baseline-shift: May;
  }
}

@media June {
  .c0 {
    baseline-shift: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`baselineShift renders postitive number 1`] = `
Array [
  .c0 {
  baseline-shift: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`baselineShift renders string 1`] = `
Array [
  .c0 {
  baseline-shift: July;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: July;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: June;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: June;
}

<div
    className="c0"
  />,
]
`;

exports[`baselineShift renders valid theme path 1`] = `
Array [
  .c0 {
  baseline-shift: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-shift: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
